--- a/style.css
+++ b/style.css
@@ -5,12 +5,44 @@
     box-sizing: border-box;
 }
 
+/* box 1 */
+
 .box1 {
 
     width: 100%;
     height: 100vh;
     background-color: red;
 }
+
+.menu {
+
+    padding: 30px;
+    position: absolute;
+    right: 0;
+
+}
+
+.menu ul li {
+
+    float: left;
+    list-style-type: none;
+    padding: 10px;
+    background-color: white;
+    border-radius: 50%;
+    margin: 10px;
+    font-weight: 800;
+
+}
+
+.menu ul li a {
+
+    text-decoration: none;
+
+}
+
+
+
+
 
 .box2 {
 
